<resources>
    <string name="app_name">Seeway</string>
    <string name="error_exception">Some Exception occurred</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="txt_header">"Lorem Ipsum is simply dummy text "</string>
    <string name="dummy_text">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."</string>

    <string-array name="lan_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>


    <string-array name="select_city">
        <item>Abu Dhabi</item>
        <item>Sharjah</item>
        <item>Al Ain</item>
        <item>Ajman</item>
        <item>RAK City</item>
        <item>Fujairah</item>
    </string-array>
    <string-array name="insurance_company">
        <item>Safety Insurance Company</item>
        <item>Ifco Tokyo</item>

    </string-array>
    <string-array name="vechiel_type">
        <item>Auris (Toyota)</item>
        <item>Avensis (Toyota)</item>
        <item>E-Class (Mercedes)</item>
        <item>Insignia (Vauxhall)</item>
        <item>i40 (Hyundai)</item>
        <item>Mondeo (Ford)</item>
        <item>Prius</item>
        <item>Superb (Skoda)</item>
    </string-array>
    <string name="underline_text"> <u>Bankin account link</u>.</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_pass">We need to verify your account, your data will be secure and private.</string>
    <string name="forgot_pass1">Enter the new password then your password will be change Don"'"t forgot again</string>
    <string name="verification_txt">Enter 4 digit verification code(OTP) sent on your registered Mobile Number.</string>
    <string name="verification_txt_email">Enter 4 digit verification code(OTP) sent on your registered Email.</string>
    <string name="reset_password">Enter the new password then your password will be changed. Do not forgot again.</string>
    <string name="profile_alert">Making Profile is better for benefits and bonuses. But also can anonymously but need pay by card not with cash and goes to screen with selection of targets.</string>
    <string name="dummy_text2">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 </string>
    <string name="title_activity_home_screen_passenger">Map</string>
    <string name="approval_text">you will be contacted by e-mail or telephone from human resources department for managing employment contract.</string>
    <string name="title_activity_home_screen_nav_passenger">HomeScreenNavPassengerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="vehicle_not_selected">Please add atleast one vehicle</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="action_settings">Settings</string>
    <string name="alert_driver_profile1">You will receive a legal contract of this company from the admin on your registerd e-mail id.</string>
    <string name="alert_driver_profile2">Have you received an e-mail from the admin regarding the company permission. If yes then select otherwise select no.Once you confirm admin will also come to know about the same</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Trip</string>
    <string name="menu_comm">Communication</string>
    <string name="menu_trip">My Trips</string>
    <string name="menu_account">My Account</string>
    <string name="menu_earning">My Earnings</string>
    <string name="menu_chat">Support Chat</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_setting">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="save">Save &amp; Submit</string>
    <string name="invite">Invite &amp; Earn</string>
    <string name="logo">logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="pickup_in">Pickup in</string>
    <string name="cancel">Cancel</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="set_location_on_map">Set Location on Map</string>
    <string name="saved_location">Saved Location</string>
    <string name="pickup_location_auto_detect">Pickup Location (Auto Detect)</string>
    <string name="where_to_go_drop_location">Where to go (Drop Location)</string>
    <string name="add_a_stop">Add a stop</string>
    <string name="done">Done</string>
    <string name="_4">4</string>
    <string name="requesting">Requesting</string>
    <string name="choose_a_place">Choose a Place</string>
    <string name="speaker">Speaker</string>
    <string name="video_call">Video Call</string>
    <string name="mute">Mute</string>
    <string name="_10_55_am">10:55 Am</string>
    <string name="schedule_a_trip">Schedule a trip</string>
    <string name="confirm_pickup_area">Confirm Pickup Area</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_a_vehicle">Choose a Vehicle</string>
    <string name="bankin">Bankin</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="we_are_almost_finished_finding_your_ride">We are almost finished finding your ride.</string>
    <string name="are_you_sure_you_want_to_clear_this_chat">Are you sure you want to clear this chat?</string>
    <string name="add_a_tip_for_driver">Add a Tip for Driver</string>
    <string name="enter_the_place">Enter the place</string>
    <string name="confirm_your_pickup_location">Confirm your Pickup Location</string>
    <string name="home">Home</string>
    <string name="confirming_your_ride">Confirming your Ride</string>
    <string name="cancel_your_trip">Cancel your Trip</string>
    <string name="you_have_to_give_some_specific_reason_for_cancellation">You have to give some specific reason for cancellation?</string>
    <string name="drop_location">Drop Location</string>
    <string name="distance_from_your_location">Distance from your location</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>

</resources>
