<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/delete_icon"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_60ssp"
        android:src="@drawable/delete_popup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_header"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/are_you_sure_you_want_to_clear_this_chat"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_icon"


        />


    <Button
        android:id="@+id/button_yes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:minWidth="@dimen/_90sdp"
        android:text="@string/yes"
        app:layout_constraintEnd_toStartOf="@+id/button_no"
        app:layout_constraintHorizontal_bias="0.5"
        android:textColor="@color/white"
        android:background="@drawable/agree_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_no" />

    <Button
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:minWidth="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/btn_logout"
        android:text="@string/no"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_yes"
        app:layout_constraintTop_toBottomOf="@+id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>