<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".panels.chat.ui.activity.CallingActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/avenir_black"
        android:text="Raul Hicks"
        android:textColor="@color/white"
        android:textSize="@dimen/_28sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Outgoing call..."
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="48dp"
        android:src="@drawable/a_photographer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_speaker"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:src="@drawable/a_photographer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/civ_mute"
        app:layout_constraintTop_toTopOf="@+id/civ_mute" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_voice_call"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:src="@drawable/a_photographer"
        app:layout_constraintBottom_toTopOf="@+id/tv_speaker"
        app:layout_constraintEnd_toStartOf="@+id/civ_mute"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_mute"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:src="@drawable/a_photographer"
        app:layout_constraintEnd_toStartOf="@+id/civ_speaker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/civ_voice_call"
        app:layout_constraintTop_toTopOf="@+id/civ_voice_call" />


    <TextView
        android:id="@+id/tv_video_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_call"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/civ_mute"
        app:layout_constraintStart_toStartOf="@+id/civ_mute"
        app:layout_constraintTop_toTopOf="@+id/tv_speaker" />


    <TextView
        android:id="@+id/tv_mute"
        android:layout_width="36dp"
        android:layout_height="16dp"
        android:text="@string/mute"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/civ_speaker"
        app:layout_constraintStart_toStartOf="@+id/civ_speaker"
        app:layout_constraintTop_toTopOf="@+id/tv_video_call" />

    <TextView
        android:id="@+id/tv_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintBottom_toTopOf="@+id/civ_remove_call"
        app:layout_constraintEnd_toEndOf="@+id/civ_voice_call"
        app:layout_constraintStart_toStartOf="@+id/civ_voice_call" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_remove_call"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/phone_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_50sdp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>