<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/tv_add_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_next_heavy"
        android:text="@string/add_a_tip_for_driver"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_add_tip_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_next_medium"
        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_tip" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:minWidth="@dimen/_50sdp"
        android:minHeight="@dimen/_50sdp"
        app:layout_constraintEnd_toStartOf="@+id/cardView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_tip_description">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir_next_heavy"
            android:text="€10"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_50sdp"
        android:minHeight="@dimen/_50sdp"
        app:layout_constraintEnd_toStartOf="@+id/cardView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView6"
        app:layout_constraintTop_toTopOf="@+id/cardView6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir_next_heavy"
            android:text="€10"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_100sdp"
        android:minHeight="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView5"
        app:layout_constraintTop_toTopOf="@+id/cardView5">

        <Spinner
            android:id="@+id/spinner_tip_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir_next_heavy"
            android:text="€10"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_yes"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/agree_bg"
        android:minWidth="@dimen/_90sdp"
        android:text="@string/yes"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7"
        app:layout_constraintTop_toTopOf="@+id/button_no" />

    <Button
        android:id="@+id/button_no"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/btn_logout"
        android:minWidth="@dimen/_90sdp"
        android:text="@string/no"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/cardView7" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>